# stake-program

./: .gitignore  Cargo.toml  README.md  flake.nix  package.json  pnpm-lock.yaml  rustfmt.toml  taplo.toml
.github/actions/purge/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: main.yml
clients/cli/: Cargo.toml
clients/cli/src/: main.rs
clients/cli/src/command/: initialize_config.rs  mod.rs
clients/js/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
clients/js/src/hooked/: index.ts  nullableAddress.ts  nullableU64.ts
clients/js/test/: _setup.ts  create.test.ts  increment.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs  pdas.rs
clients/rust/src/hooked/: mod.rs  nullable_address.rs  nullable_u64.rs
clients/rust/tests/: create.rs  deactivate_stake.rs  deactivate_stake.rs.disable  deactivate_stake.rs_  distribute_rewards.rs  distribute_rewards.rs.disable  duna_document.rs  harvest_holder_rewards.rs  harvest_holder_rewards.rs.disable  harvest_holder_rewards.rs_  harvest_sol_stake_rewards.rs  harvest_sol_staker_rewards.rs  harvest_stake_rewards.rs  harvest_sync_rewards.rs  harvest_sync_rewards.rs.disable  harvest_validator_rewards.rs  harvest_validator_rewards.rs.disable  inactivate_sol_staker_stake.rs  inactivate_sol_staker_stake.rs.disable  inactivate_stake.rs  inactivate_validator_stake.rs  inactivate_validator_stake.rs.disable  initialize_config.rs  initialize_sol_staker_stake.rs  initialize_stake.rs  initialize_stake.rs_  initialize_validator_stake.rs  move_sol_staker_tokens.rs.disable  set_authority.rs  set_authority.rs.disable  set_authority.rs_  slash.rs  slash_sol_staker_stake.rs  slash_sol_staker_stake.rs.disable  slash_validator_stake.rs  slash_validator_stake.rs.disable  sol_staker_move_tokens.rs  sol_staker_set_authority_override.rs  sol_staker_stake_tokens.rs  sol_staker_stake_tokens.rs.disable  (+13 more)
clients/rust/tests/setup/: config.rs  harvest.rs  mod.rs  rewards.rs  sol_staker_stake.rs  stake.rs  token.rs  validator_stake.rs  vote.rs
program/: Cargo.toml  README.md  idl.json
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs
program/src/processor/: deactivate_stake.rs  distribute_rewards.rs  harvest_holder_rewards.rs  harvest_sol_staker_rewards.rs  harvest_stake_rewards.rs  harvest_sync_rewards.rs  harvest_validator_rewards.rs  inactivate_sol_staker_stake.rs  inactivate_stake.rs  inactivate_validator_stake.rs  initialize_config.rs  initialize_sol_staker_stake.rs  initialize_stake.rs  initialize_validator_stake.rs  mod.rs  move_sol_staker_stake.rs  set_authority.rs  slash.rs  slash_sol_staker_stake.rs  slash_stake.rs  slash_validator_stake.rs  sol_staker_move_tokens.rs  sol_staker_set_authority_override.rs  sol_staker_stake_tokens.rs  sol_staker_sync_authority.rs  sol_staker_update_authority.rs  stake_tokens.rs  sync_sol_stake.rs  unstake_tokens.rs  update_config.rs  validator_override_staked_lamports.rs  validator_stake_tokens.rs  validator_sync_authority.rs  withdraw_inactive_stake.rs
program/src/state/: config.rs  mod.rs  sol_staker_stake.rs  stake.rs  validator_stake.rs
scripts/: env-variables.mjs  generate-clients.mjs  utils.mjs
scripts/ci/: set-variables.mjs
scripts/client/: lint-rust.mjs
scripts/program/: build.mjs  format.mjs  lint.mjs
src/: instruction.rs  state.rs
