[workspace]
resolver = "2"
members = ["clients/rust", "program"]

[workspace.metadata.scripts.rustfmt.toolchain]
channel = "nightly-2024-12-01"

[workspace.metadata.scripts.clippy.toolchain]
channel = "nightly-2024-12-01"

[patch.crates-io]
solana-account-decoder = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-accounts-db = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-address-lookup-table-program = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-bpf-loader-program = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-client = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-compute-budget = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-compute-budget-program = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-config-program = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-feature-set = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-instruction = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-loader-v4-program = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-program = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-program-runtime = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-pubkey = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-quic-client = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-runtime = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-sdk = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-send-transaction-service = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-stake-program = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-svm = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-system-program = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-timings = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-transaction-status = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-vote-program = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
solana-zk-token-sdk = { git = "https://github.com/paladin-bladesmith/agave-patched", rev = "45688a23388a06fb54e5982c196d201a25e33e88" }
