[package]
name = "paladin-stake-program"
version = "0.0.1"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"

[package.metadata.solana]
program-id = "GQurxHCYQCNfYR37nHNb6ZiLWg3jpbh2fWv2RpzwGqRK"
program-dependencies = []
account-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[features]
bpf-entrypoint = []

[dependencies]
arrayref = "0.3.7"
bytemuck = "1.16.0"
num-derive = "^0.3"
num-traits = "^0.2"
paladin-rewards-program-client = { version = "^0", git = "https://github.com/paladin-bladesmith/rewards-program.git" }
paladin-sol-stake-view-program-client = { version = "^0", git = "https://github.com/paladin-bladesmith/sol-stake-view-program.git" }
shank = "^0.4.2"
solana-program = "2.0.2"
spl-discriminator = "0.3.0"
spl-pod = "0.3.1"
spl-program-error = "0.5.0"
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }
thiserror = "^1.0"
