[package]
name = "paladin-stake-program-client"
version = "0.0.1"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
anchor = ["dep:anchor-lang"]
anchor-idl-build = ["anchor", "anchor-lang?/idl-build"]
serde = ["dep:serde", "dep:serde_with"]
test-sbf = []

[dependencies]
anchor-lang = { version = "0.30.0", optional = true }
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "2.0.2"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
paladin-rewards-program-client = { version = "^0", git = "https://github.com/paladin-bladesmith/rewards-program.git" }
paladin-sol-stake-view-program-client = { version = "^0", git = "https://github.com/paladin-bladesmith/sol-stake-view-program.git" }
solana-program-test = "^2.0.2"
solana-sdk = "2.0.2"
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"] }
spl-tlv-account-resolution = "0.7.0"
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.7.0"
