[package]
name = "paladin-stake-program-client"
version = "0.0.1"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
anchor = []
anchor-idl-build = []
serde = ["dep:serde", "dep:serde_with"]
test-sbf = []

[dependencies]
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "2.1.4"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
bincode = "1.3.3"
paladin-rewards-program-client = { git = "https://github.com/paladin-bladesmith/rewards-program" }
paladin-sol-stake-view-program-client = { git = "https://github.com/paladin-bladesmith/sol-stake-view-program" }
solana-program-test = "2.1.4"
solana-sdk = "2.1.4"
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"] }
spl-tlv-account-resolution = "0.7.0"
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.7.0"
paladin-stake-program = { path = "../../program" }